Add complete crypto investment application with API, database, and testing infrastructure
- Added REST API with Flask for portfolio management
- Implemented SQLite database with SQLAlchemy models
- Added comprehensive test suite with pytest
- Included portfolio tracking with transaction history
- Added data validation and error handling
- Configured logging and monitoring
- Added GitHub Actions CI/CD workflow
- Included example environment configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,25 @@ textblob==0.19.0
 
 # Web framework
 Flask==3.0.3
+Flask-CORS==4.0.0
+
+# Configuration
+python-dotenv==1.0.0
+
+# Database
+SQLAlchemy==2.0.25
+alembic==1.13.1
 
 # Reporting
 jinja2==3.1.6
 pdfkit==1.0.0
+
+# Testing
+pytest==8.0.0
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-asyncio==0.23.0
+requests-mock==1.11.0
 
 # Optional dependencies
 # kaleido  # For chart exports
