Add comprehensive social sentiment analysis feature
- Add Reddit API integration for real-time community sentiment
- Implement CoinGecko market data collection
- Create AI-powered sentiment analysis engine with crypto-specific terminology
- Build interactive sentiment dashboard with gauges, charts, and metrics
- Add sentiment-based trading signals and game mechanics
- Include Fear & Greed Index and social volume tracking
- Add comprehensive API endpoints for sentiment data
- Implement caching and background data collection service
- Update UI with sentiment panel below AI predictions
- Add detailed setup documentation and configuration

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-# Cryptocurrency Investment App Configuration
-# Copy this file to .env and update with your values
-
-# Application Settings
+# Local Development Configuration
 APP_ENV=development
 DEBUG=True
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=dev-secret-key-12345
 
-# Server Ports
+# Ports
 FRONTEND_PORT=8050
 API_PORT=5000
 
@@ -14,29 +11,38 @@ API_PORT=5000
 INITIAL_INVESTMENT=1000
 MONTHLY_CONTRIBUTION=500
 
-# API Keys (for future use)
-TWITTER_API_KEY=your-twitter-api-key
-TWITTER_API_SECRET=your-twitter-api-secret
-TWITTER_ACCESS_TOKEN=your-twitter-access-token
-TWITTER_ACCESS_SECRET=your-twitter-access-secret
+# Feature Flags
+ENABLE_REAL_SENTIMENT=True
+ENABLE_LIVE_TRADING=False
+ENABLE_EMAIL_REPORTS=False
 
-# Database (for future SQLite/PostgreSQL)
-DATABASE_URL=sqlite:///crypto_investment.db
+# Reddit API Configuration (Get from https://www.reddit.com/prefs/apps)
+REDDIT_CLIENT_ID=your_reddit_client_id
+REDDIT_CLIENT_SECRET=your_reddit_client_secret
+REDDIT_USER_AGENT=YourAppName/1.0 by YourUsername
+
+# CoinGecko API Configuration (Get from https://www.coingecko.com/en/api)
+COINGECKO_API_KEY=your_coingecko_api_key
+COINGECKO_API_URL=https://api.coingecko.com/api/v3
+
+# CoinMarketCap API Configuration (Get from https://coinmarketcap.com/api/)
+COINMARKETCAP_API_KEY=your_coinmarketcap_api_key
+COINMARKETCAP_API_URL=https://pro-api.coinmarketcap.com/v1
+
+# Alternative.me API (Fear & Greed Index)
+ALTERNATIVE_API_URL=https://api.alternative.me/fng/
+
+# Sentiment Collection Configuration
+SENTIMENT_COLLECTION_ENABLED=true
+SENTIMENT_DEBUG_MODE=false
+SENTIMENT_CACHE_ENABLED=true
+SENTIMENT_RATE_LIMIT_REDDIT=60
+SENTIMENT_RATE_LIMIT_COINGECKO=50
+SENTIMENT_RATE_LIMIT_CMC=30
 
 # Logging
 LOG_LEVEL=INFO
-LOG_RETENTION_DAYS=30
 
-# Neural Network Settings
-EPOCHS=50
-BATCH_SIZE=32
-LEARNING_RATE=0.001
-
-# Data Settings
-DATA_UPDATE_INTERVAL=3600  # seconds
-MAX_HISTORICAL_DAYS=1825   # 5 years
-
-# Feature Flags
-ENABLE_REAL_SENTIMENT=False
-ENABLE_LIVE_TRADING=False
-ENABLE_EMAIL_REPORTS=False
+# Database
+USE_DATABASE=False  # Set to True after running migration
+DATABASE_URL=sqlite:///crypto_investment.db
