--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,15 @@ textblob==0.19.0
 # Web framework
 Flask==3.0.3
 Flask-CORS==4.0.0
+dash-bootstrap-components==1.6.0
 
 # Configuration
 python-dotenv==1.0.0
+
+# Social media and sentiment analysis
+praw==7.7.1
+beautifulsoup4==4.12.3
+vaderSentiment==3.3.2
 
 # Database
 SQLAlchemy==2.0.25
